| Summary: | ASTERISK-28292: Changed to show all channel stats including wrong media | ||||
| Reporter: | sungtae kim (pchero) | Labels: | pjsip | ||
| Date Opened: | 2019-02-14 17:09:19.000-0600 | Date Closed: | 2019-02-20 09:01:42.000-0600 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||
| Versions: | 16.1.1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Currently, if the pjsip show channelstats cli hits any invalid channel info(no media, no channel info, ...), it doesn't iterate last of things. It just stop there.
But this should show last of things. {noformat} *CLI> pjsip show channelstats ...........Receive......... .........Transmit.......... BridgeId ChannelId ........ UpTime.. Codec. Count Lost Pct Jitter Count Lost Pct Jitter RTT.... =========================================================================================================== PJSIP/sipp-uac-00000002 not valid Objects found: 1 {noformat} This should be like below. {noformat} ...........Receive......... .........Transmit.......... BridgeId ChannelId ........ UpTime.. Codec. Count Lost Pct Jitter Count Lost Pct Jitter RTT.... =========================================================================================================== PJSIP/sipp-uac-00000002 not valid sipp-uac-00000003 00:00:37 ulaw 0 1 0 0.000 1810 0 0 0.000 0.000 Objects found: 2 {noformat} | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2019-02-14 17:09:19.501-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-02-20 09:01:43.360-0600 Change 11000 merged by Friendly Automation: chan_pjsip: Changed to continued after invalid media for pjsip show channelstats [https://gerrit.asterisk.org/11000|https://gerrit.asterisk.org/11000] By: Friendly Automation (friendly-automation) 2019-02-20 09:04:20.136-0600 Change 11011 merged by Friendly Automation: chan_pjsip: Changed to continued after invalid media for pjsip show channelstats [https://gerrit.asterisk.org/11011|https://gerrit.asterisk.org/11011] By: Friendly Automation (friendly-automation) 2019-02-20 09:06:30.488-0600 Change 11012 merged by Friendly Automation: chan_pjsip: Changed to continued after invalid media for pjsip show channelstats [https://gerrit.asterisk.org/11012|https://gerrit.asterisk.org/11012] | ||||